[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraph-tool"
version = "0.2.0"
authors = [
  { name="BEL AICH David", email="belaich.david@outlook.fr" },
]
description = "pygraph-tool is a module to create and manipulate graphs."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering"
]
keywords=[
    "graph", "pygraph", "pygraph-tool",
    "nodes", "edges", "node", "edge"
]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/DevAI-64/pygraph-tool"
