[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[project]
name = "pygraph-tool"
version = "2.0.0"
description = "A lightweight Python library to create and manipulate object-oriented graphs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "BEL AICH David", email = "belaich.david@outlook.fr" },
]
maintainers = [
    { name = "BEL AICH David", email = "belaich.david@outlook.fr" },
]
keywords = [
    "graph",
    "pygraph",
    "pygraph-tool",
    "nodes",
    "edges",
    "node",
    "edge",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/DevAI-64/pygraph-tool"
Repository = "https://github.com/DevAI-64/pygraph-tool"
Issues = "https://github.com/DevAI-64/pygraph-tool/issues"
Changelog = "https://github.com/DevAI-64/pygraph-tool/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "coverage>=7.14.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.uv.build-backend]
module-name = "pygraph_tool"
module-root = ""

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "D",
]
ignore = [
    "D100",
    "D104",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
source = ["pygraph_tool"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
major_version_zero = false
